# Spybar

./: .gitignore  Makefile  README.md  pyproject.toml
src/spybar/: __main__.py  progress.py  utils.py
tests/issue_00001/: test_shorten_file_path.py
