[tool.poetry]
name = "spybar"
version = "0.1.0"
description = "Adds progress bars to any file-reading tool (gzip, md5sum, etc)"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.6.7"
tqdm = "^4.41.1"

[tool.poetry.dev-dependencies]
ipython = "^7.11.1"
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.3.2"

[tool.poetry.scripts]
spybar = 'spybar.__main__:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
